CombatListener.java